--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg4"
     tools:context="comsci.sitta.myfirstapp.MainActivity">
 
     <TextView
@@ -17,13 +14,22 @@
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="@dimen/H1"
-        android:id="@+id/textView" />
+        android:id="@+id/titelView" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="62dp"></LinearLayout>
+        android:layout_below="@+id/titelView"
+        android:layout_above="@id/btnMoreinfo"
+        android:id="@+id/livTraffic"
+        android:background="@color/colorAccent"
+        android:layout_margin="@dimen/my_margin"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/btnMoreinfo"
+        android:text="@string/MoreInfo"
+        />
 </RelativeLayout>
