--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
 
     <dimen name="H1">35sp</dimen>
     <dimen name="H2">20sp</dimen>
+    <dimen name="H3">14sp</dimen>
+
+    <dimen name="my_margin">15dp</dimen>
+    <dimen name="my_icon">120dp</dimen>
 </resources>
