--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/my_icon"
         android:layout_height="@dimen/my_icon"
         app:srcCompat="@drawable/traffic_01"
-        android:id="@+id/imageView2"
+        android:id="@+id/imvIcon"
         android:layout_weight="0"
         android:layout_margin="@dimen/my_margin"/>
 
@@ -28,7 +28,7 @@
             android:textStyle="normal|bold" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txtDetailLiv"
             android:text="TextView"
             android:textSize="@dimen/H3"
             android:layout_width="match_parent"
