this is new update Android Studio naja

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/imvImageDetail"
         android:layout_above="@+id/btnBack"
-        android:layout_margin="10sp"
+        android:layout_margin="@dimen/my_margin"
         android:background="@color/colorAccent">
 
 
