--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
 
         <Button
             android:id="@+id/btnAboutme"
+            android:onClick="onClickAboutme"
             android:text="@string/aboutMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
